# hairy-crab

./: Cargo.toml  rustfmt.toml
.github/workflows/: build.yml
crates/algo/: Cargo.toml
crates/algo/src/: main.rs
crates/dwarves/: Cargo.toml
crates/dwarves/src/: dw_info.rs  main.rs  sym_dw.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/mac/: Cargo.toml
crates/mac/src/: main.rs  partial.rs  proc.rs  round_up.rs  slice2int.rs
crates/mixlua/: Cargo.toml
crates/mixlua/lua/: init.lua  pos.lua  st.lua
crates/mixlua/src/: main.rs
crates/qpid/: Cargo.toml
crates/qpid/src/: lib.rs  main.rs
crates/thrd/: Cargo.toml
crates/thrd/src/: bg_fwrt.rs  bg_inotify.rs  main.rs
src/: dp.rs  native_gui.rs  slice2int.rs
