[package]
name = "dwarves"
version = "0.1.0"
edition = "2021"

[dependencies]
getopts = "0.2"
goblin = "0.8.1"
# libbpf-sys = "1.4.5+v1.4.5"

[dependencies.symbolic]
version = "12.11.1"

[dependencies.gimli]
version = "0.31.0"
features = [
    "read"
]

[dependencies.scroll]
version = "0.12"
# default_features = false

[dependencies.object]
version = "0.36.0"
features = ["wasm", "write"]

[[bin]]
name = "dwarves"
path = "src/main.rs"
